# Cross-Platform-Game-Engine

./: .gitignore  .gitmodules  .txt  CMakeLists.txt  LICENSE  Log.txt  Makefile  Progen_VS2017.bat  Progen_VS2019.bat  Progen_VS2022.bat  Progen_Xcode.sh  Progen_Xcode_arm.sh  Progen_gmake.bat  Progen_gmake.sh  README.md  UpdateSubmodules.bat  premake5.lua
Editor/: CMakeLists.txt  Editor.aps  Editor.rc  Icon.icns  imgui.ini  resource.h
Editor/data/Shaders/: BlurEffect.frag  FinalPass.frag  Grid.frag  Grid.vert  Renderer2D_Circle.frag  Renderer2D_Circle.vert  Renderer2D_HairLine.frag  Renderer2D_HairLine.vert  Renderer2D_Line.frag  Renderer2D_Line.vert  Renderer2D_Quad.frag  Renderer2D_Quad.vert  Renderer2D_Quad.wgsl  Renderer2D_Text.frag  Renderer2D_Text.vert  Standard.frag  Standard.vert
Editor/resources/: Bucket.staticMesh
Editor/resources/Shaders/: Grid.frag  Grid.vert  Renderer2D_Circle.frag  Renderer2D_Circle.vert  Renderer2D_HairLine.frag  Renderer2D_HairLine.vert  Renderer2D_Quad.frag  Renderer2D_Quad.vert  Renderer2D_Tilemap.frag  Renderer2D_Tilemap.vert  Standard.frag  Standard.vert  Texture.frag  Texture.vert
Editor/src/: EditorApp.cpp  EditorApp.h  MainDockSpace.cpp  MainDockSpace.h  ProjectData.h  ProjectsStartScreen.cpp  ProjectsStartScreen.h  RuntimeExporter.cpp  RuntimeExporter.h  TestLayer.cpp  TestLayer.h  ViewportCameraController.cpp  ViewportCameraController.h  main.cpp
Editor/src/FileSystem/: AssetPacker.cpp  AssetPacker.h  Directory.cpp  Directory.h  FileDialog.cpp  FileDialog.h  FileWatcher.h  Webpage.cpp  Webpage.h
Editor/src/Fonts/: Consolas.cpp  Cousine-Regular.cpp  Fonts.cpp  Fonts.h  fa-solid.cpp  fa-webfont.cpp  md-regular.cpp  md-webfont.cpp
Editor/src/History/: HistoryCommands.cpp  HistoryCommands.h  HistoryManager.cpp  HistoryManager.h
Editor/src/ImGui/: EditorStyles.cpp  EditorStyles.h  ImGuiAssetEdit.h  ImGuiContentExplorer.cpp  ImGuiContentExplorer.h  ImGuiDockSpace.cpp  ImGuiDockSpace.h  ImGuiFileEdit.cpp  ImGuiFileEdit.h  ImGuiHeirachy.cpp  ImGuiHeirachy.h  ImGuiJoystickInfo.cpp  ImGuiJoystickInfo.h  ImGuiMaterialEdit.cpp  ImGuiMaterialEdit.h  ImGuiPhysicsMaterialEdit.cpp  ImGuiPhysicsMaterialEdit.h  ImGuiPreferences.cpp  ImGuiPreferences.h  ImGuiProjectsStartScreen.cpp  ImGuiProjectsStartScreen.h  ImGuiProperties.cpp  ImGuiProperties.h  ImGuiTextEditor.cpp  ImGuiTextEditor.h  ImGuiTextureEdit.cpp  ImGuiTextureEdit.h  ImGuiTilemapEditor.cpp  ImGuiTilemapEditor.h  ImGuiTransform.cpp  ImGuiTransform.h  ImGuiVectorEdit.cpp  ImGuiVectorEdit.h  ImGuiViewport.cpp  ImGuiViewport.h  ImGuizmo.cpp
Editor/src/Importers/: FbxImporter.cpp  FbxImporter.h  ImportManager.cpp  ImportManager.h  OBJImporter.cpp  OBJImporter.h  TiledImporter.cpp  TiledImporter.h  glTFImporter.cpp  glTFImporter.h
Editor/src/Interfaces/: ICopyable.h  IImporter.h  ISaveable.h  IUndoable.h
Editor/src/Panels/: ConsolePanel.cpp  ConsolePanel.h  ContentExplorerPanel.cpp  ContentExplorerPanel.h  EditorPreferencesPanel.cpp  EditorPreferencesPanel.h  ErrorListPanel.cpp  ErrorListPanel.h  HeirachyPanel.cpp  HeirachyPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  JoystickInfoPanel.cpp  JoystickInfoPanel.h  ProjectSettingsPanel.cpp  ProjectSettingsPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  ViewportPanel.cpp  ViewportPanel.h
Editor/src/Styles/: EditorStyles.cpp  EditorStyles.h
Editor/src/Toolbars/: PlayPauseToolbar.cpp  PlayPauseToolbar.h  SaveOpenToolbar.cpp  SaveOpenToolbar.h
Editor/src/Viewers/: AudioView.cpp  AudioView.h  BehaviourTreeView.cpp  BehaviourTreeView.h  FontView.cpp  FontView.h  MaterialView.cpp  MaterialView.h  PhysicsMaterialView.cpp  PhysicsMaterialView.h  ScriptView.cpp  ScriptView.h  SpriteSheetView.cpp  SpriteSheetView.h  StaticMeshView.cpp  StaticMeshView.h  TextureView.cpp  TextureView.h  TilesetView.cpp  TilesetView.h  ViewerManager.cpp  ViewerManager.h  VisualScriptView.cpp  VisualScriptView.h
Editor/styles/: Editor.style
Engine/: CMakeLists.txt  Makefile  PerspectiveCameraController.cpp  PerspectiveCameraController.h  cpp.hint
Engine/src/: Engine.h  Jupiter.h  OrthoGrpahicCameraController.cpp  OrthoGrpahicCameraController.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  include.h  stdafx.h
Engine/src/AI/: Astar.cpp  Astar.h  BehaviorTree.h  BehaviourTree.h  BehaviourTreeSerializer.cpp  BehaviourTreeSerializer.h  Decorators.h  StateMachine.cpp  StateMachine.h  Tasks.cpp  Tasks.h
Engine/src/Animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h
Engine/src/Asset/: Audio.cpp  Audio.h  AudioClip.cpp  AudioClip.h  Font.cpp  Font.h  LuaScript.cpp  LuaScript.h  Material.cpp  Material.h  PhysicsMaterial.cpp  PhysicsMaterial.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  Tileset.cpp  Tileset.h
Engine/src/Core/: AABB.cpp  AABB.h  Application.cpp  Application.h  Asset.h  BoundingBox.cpp  BoundingBox.h  Colour.h  Cursor.h  EntryPoint.cpp  EntryPoint.h  Factory.h  Input.cpp  Input.h  InputParser.h  Joysticks.cpp  Joysticks.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseButtonCodes.h  ObjectPool.h  Settings.cpp  Settings.h  UUID.cpp  UUID.h  Version.h  VirtualFileSystem.cpp  VirtualFileSystem.h  Window.cpp  Window.h  core.h
Engine/src/Events/: ApplicationEvent.h  Event.cpp  Event.h  JoystickEvent.h  KeyEvent.h  MouseEvent.h  SceneEvent.h
Engine/src/ImGui/: ImGuiBuild.cpp  ImGuiBuildDirectX11.cpp  ImGuiBuildGlfw.cpp  ImGuiConsole.cpp  ImGuiConsole.h  ImGuiConsoleSink.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiUtilites.h  ImGuiUtilities.cpp
Engine/src/Logging/: Debug.h  Instrumentor.h  InternalConsoleSink.cpp  InternalConsoleSink.h  Logger.cpp  Logger.h  Timer.h
Engine/src/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
Engine/src/Physics/: Contact2D.h  HitResult2D.h  PhysicsEngine2D.cpp  PhysicsEngine2D.h  PhysicsMaterial.cpp  PhysicsMaterial.h
Engine/src/Renderer/: Buffer.cpp  (+47 more)
Runtime/: CMakeLists.txt
Runtime/src/: Runtime.cpp  Runtime.h  RuntimeLayer.cpp  RuntimeLayer.h  main.cpp
(+282 files in other folders)
